--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
   },
   "homepage": "https://github.com/Olena-Salnikova/hillel-my-js-api-homeworks#readme",
   "dependencies": {
-    "axios": "^1.12.2"
+    "@faker-js/faker": "^10.1.0",
+    "axios": "^1.12.2",
+    "axios-cookiejar-support": "^6.0.4",
+    "moment": "^2.30.1",
+    "tough-cookie": "^5.1.2"
   },
   "devDependencies": {
-    "jest": "^30.2.0"
+    "jest": "^30.2.0",
+    "jest-html-reporter": "^4.3.0"
   }
 }
